MultiSite: Powered-By footer(Bug fixed) - We have changed the powered-by-footer visible at all the time. Not just when scrolled down to the very bottom.
git-svn-id: http://svn.contrexxlabs.com/contrexx/trunk@34242 5ce06e5d-2b28-0410-aa6a-b3cd9cf52d8a

--- a/core_modules/MultiSite/View/Style/PoweredByFooterFrontend.css
+++ b/core_modules/MultiSite/View/Style/PoweredByFooterFrontend.css
@@ -1,7 +1,16 @@
+div#preview-content {
+    float: left;
+    width: 100%;
+    padding-bottom: 30px;
+}
+
 div#PoweredByFooter {
     clear: both;
     width: 100%;
     height: 30px;
+    position: fixed;
+    bottom: 0px;
+    z-index: 9999;
     background: rgb(0, 113, 188);    
     color: rgb(255, 255, 255);
     padding: 2px 10px;
